--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "lodash": "^4.17.21",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
